--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Avtomobil</title>
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -142,8 +142,8 @@
                 <h2>Помощь на всех этапах покупки
                 </h2>
                 <p>Оставьте заявку и наш менеджер перезвонит вам через 15 минут</p>
-                <form action="">
-                    <input type="phone" value="+7( )">
+                <form action="#">
+                    <input type="text" value="+7( )">
                 </form>
                 <button class="btn">Получить консультацию</button>
                 <img src="./img/arrov.png" alt="">
